--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -118,9 +118,9 @@
           active: primaryNavId == "courses"
         },
         {
-          href: baseUrl + "/locations",
-          text: "Locations",
-          active: primaryNavId == "locations"
+          href: baseUrl + "/schools",
+          text: "Schools",
+          active: primaryNavId == "schools"
         },
         {
           href: baseUrl + "/users",
