Change 'location' to 'school'

--- a/app/views/locations/check-your-answers.njk
+++ b/app/views/locations/check-your-answers.njk
@@ -1,9 +1,9 @@
 {% extends "_layout.njk" %}
 
-{% set primaryNavId = "locations" %}
+{% set primaryNavId = "schools" %}
 
 {% set title = "Check your answers" %}
-{% set caption = "Add location" %}
+{% set caption = "Add school" %}
 
 {% block beforeContent %}
 {{ govukBackLink({
