--- a/app/views/locations/show.njk
+++ b/app/views/locations/show.njk
@@ -1,6 +1,6 @@
 {% extends "_layout.njk" %}
 
-{% set primaryNavId = "locations" %}
+{% set primaryNavId = "schools" %}
 
 {% set title = location.name %}
 
@@ -115,7 +115,7 @@
       }) }}
 
       <p class="govuk-body">
-        <a class="govuk-link app-link--destructive" href="{{ actions.delete }}">Remove location</a>
+        <a class="govuk-link app-link--destructive" href="{{ actions.delete }}">Remove school</a>
       </p>
 
     </div>
