Change page heading

--- a/app/views/locations/edit.njk
+++ b/app/views/locations/edit.njk
@@ -5,7 +5,7 @@
 {% if referrer == "change" %}
   {% set title = location.name %}
 {% else %}
-  {% set title = "Edit school details" %}
+  {% set title = "School details" %}
   {% set caption = "Add school" %}
 {% endif %}
 
