--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -103,7 +103,7 @@
           },
           {
             key: {
-              text: "Subject"
+              text: "Subject" + ("s" if course.subjects.length > 1)
             },
             value: {
               html: subjectHtml
@@ -222,7 +222,7 @@
           },
           {
             key: {
-              text: "Location" + ("s" if course.locations.length > 1)
+              text: "School placement" + ("s" if course.locations.length > 1)
             },
             value: {
               html: locationHtml
@@ -230,7 +230,7 @@
             actions: {
               items: [
                 {
-                  href: actions.change + "/location?referrer=details",
+                  href: actions.change + "/school-placement?referrer=details",
                   text: "Change",
                   visuallyHiddenText: "location"
                 }
