--- a/app/views/courses/location.njk
+++ b/app/views/courses/location.njk
@@ -2,7 +2,7 @@
 
 {% set primaryNavId = "courses" %}
 
-{% set title = "Locations" %}
+{% set title = "School placements" %}
 
 {% if course.id %}
   {% set caption = course.name + " (" + course.code + ")" %}
