Update label on school vacancies list

--- a/app/views/courses/vacancies/show.njk
+++ b/app/views/courses/vacancies/show.njk
@@ -56,7 +56,7 @@
         <caption class="govuk-visually-hidden">List of schools and vacancies</caption>
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
-            <th class="govuk-table__header" scope="col">School placement</th>
+            <th class="govuk-table__header" scope="col">Placement school</th>
             <th class="govuk-table__header" scope="col">Vacancies</th>
           </tr>
         </thead>
