Update school placement routing

--- a/app/views/courses/check-your-answers.njk
+++ b/app/views/courses/check-your-answers.njk
@@ -219,7 +219,7 @@
               actions: {
                 items: [
                   {
-                    href: actions.change + "/school-placement?referrer=check",
+                    href: actions.change + "/school-placements?referrer=check",
                     text: "Change",
                     visuallyHiddenText: "location"
                   }
