--- a/app/views/courses/details.njk
+++ b/app/views/courses/details.njk
@@ -230,7 +230,7 @@
             actions: {
               items: [
                 {
-                  href: actions.change + "/school-placement?referrer=details",
+                  href: actions.change + "/school-placements?referrer=details",
                   text: "Change",
                   visuallyHiddenText: "location"
                 }
