Update button label

--- a/app/views/locations/check-your-answers.njk
+++ b/app/views/locations/check-your-answers.njk
@@ -99,7 +99,7 @@
         }) }}
 
         {{ govukButton({
-          text: "Add location"
+          text: "Add school"
         }) }}
 
       </form>
