Fix typo in remove courses text

--- a/app/views/locations/delete.njk
+++ b/app/views/locations/delete.njk
@@ -31,7 +31,7 @@
         {% if hasCourses %}
 
           <p class="govuk-body">{{ location.name }} is a school for courses run by {{ organisation.name }}.</p>
-          <p class="govuk-body">To remove {{ location.name }}, you must first remove the school for those courses.</p>
+          <p class="govuk-body">To remove {{ location.name }}, you must first remove the school from those courses.</p>
 
         {% else %}
 
