Add calls to action to course list empty state

--- a/app/views/courses/list.njk
+++ b/app/views/courses/list.njk
@@ -29,19 +29,19 @@
         {% elif locations.length and (not organisation.accreditedBodies.length) %}
 
           {{ govukInsetText({
-            text: "Add an accredited provider before adding courses"
+            html: '<a href="#">Add an accredited provider</a> before adding courses'
           }) }}
 
         {% elif (not locations.length) and organisation.accreditedBodies.length %}
 
           {{ govukInsetText({
-            text: "Add a location before adding courses"
+            html: '<a href="#">Add a school</a> before adding courses'
           }) }}
 
         {% else %}
 
           {{ govukInsetText({
-            text: "Add an accredited provider and a location before adding courses"
+            html: '<a href="#">Add an accredited provider</a> and <a href="#">add a school</a> before adding courses'
           }) }}
 
         {% endif %}
@@ -58,7 +58,7 @@
         {% else %}
 
           {{ govukInsetText({
-            text: "Add a location before adding courses"
+            html: '<a href="#">Add a school</a> before adding courses'
           }) }}
 
         {% endif %}
