--- a/app/views/courses/list.njk
+++ b/app/views/courses/list.njk
@@ -68,19 +68,23 @@
     </div>
   </div>
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+  {% for provider in courses %}
 
-      {% for provider in courses %}
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds">
+          {% if provider.name %}
+            <h2 class="govuk-heading-m">
+              <span class="govuk-caption-m">
+                Accredited provider
+              </span>
+              {{ provider.name }}
+            </h2>
+          {% endif %}
+      </div>
+    </div>
 
-        {% if provider.name %}
-          <h2 class="govuk-heading-m">
-            <span class="govuk-caption-m">
-              Accredited provider
-            </span>
-            {{ provider.name }}
-          </h2>
-        {% endif %}
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-full">
 
         {% if provider.courses.length %}
 
@@ -164,9 +168,9 @@
           <p class="govuk-body">There are no courses for {{ provider.name if provider.name else "your organisation" }}.</p>
         {% endif %}
 
-      {% endfor %}
-
+      </div>
     </div>
-  </div>
+
+  {% endfor %}
 
 {% endblock %}
