Update URN field width

--- a/app/views/locations/edit.njk
+++ b/app/views/locations/edit.njk
@@ -49,6 +49,7 @@
             text: "Unique reference number (URN) (optional)",
             classes: "govuk-label--s"
           },
+          classes: "govuk-input--width-10",
           errorMessage: errors | getErrorMessage("location-urn"),
           value: location.urn
         }) }}
