--- a/app/views/courses/preview/index.njk
+++ b/app/views/courses/preview/index.njk
@@ -14,6 +14,11 @@
 {% endblock %}
 
 {% block content %}
+
+  {{ govukNotificationBanner({
+    text: "This is a preview"
+  }) }}
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
