--- a/app/views/courses/preview/sections/school-placements.njk
+++ b/app/views/courses/preview/sections/school-placements.njk
@@ -60,7 +60,7 @@
   {% else %}
 
     {% set insetHtml %}
-      <a class="govuk-link" href="{{ actions.change }}/school-placements">Enter details about school placements</a>
+      <a class="govuk-link" href="{{ actions.change }}/school-placements?referrer=preview">Enter details about school placements</a>
     {% endset %}
 
     {{ govukInsetText({
