--- a/app/views/locations/edit.njk
+++ b/app/views/locations/edit.njk
@@ -54,7 +54,7 @@
           value: location.urn
         }) }}
 
-        <p class="govuk-body govuk-!-margin-bottom-7">Find URNs on <a class="govuk-hint" href="https://www.get-information-schools.service.gov.uk/" target="_blank">Get information about schools (opens in new tab)</a></p>
+        <p class="govuk-body govuk-!-margin-bottom-7">Find URNs on <a class="govuk-hint" href="https://www.get-information-schools.service.gov.uk/" target="_blank">Get Information about Schools (opens in new tab)</a></p>
 
         {% call govukFieldset({
           legend: {
