--- a/app/views/examples/schools/choose.njk
+++ b/app/views/examples/schools/choose.njk
@@ -36,7 +36,7 @@
 
       {% if schoolCount == 0 %}
         <p class="govuk-body">
-          <a class="govuk-link" href="{{ actions.back }}">Try changing your search</a>.
+          <a class="govuk-link" href="{{ actions.back }}">Change your search</a>.
         </p>
       {% elif schoolCount > 15 %}
         <p class="govuk-body">
@@ -44,7 +44,7 @@
         </p>
       {% else %}
         <p class="govuk-body">
-          <a class="govuk-link" href="{{ actions.back }}">Try changing your search</a> if the school you’re looking for is not listed.
+          <a class="govuk-link" href="{{ actions.back }}">Change your search</a> if the school you’re looking for is not listed.
         </p>
       {% endif %}
 
