--- a/app/views/examples/schools/choose.njk
+++ b/app/views/examples/schools/choose.njk
@@ -40,7 +40,7 @@
         </p>
       {% elif schoolCount > 15 %}
         <p class="govuk-body">
-          Showing the first 15 results below. <a class="govuk-link" href="{{ actions.back }}">Try narrowing down your search</a> if the school you’re looking for is not listed.
+          Showing the first 15 results. <a class="govuk-link" href="{{ actions.back }}">Try narrowing down your search</a> if the school you’re looking for is not listed.
         </p>
       {% else %}
         <p class="govuk-body">
