--- a/app/views/courses/preview/sections/about-course.njk
+++ b/app/views/courses/preview/sections/about-course.njk
@@ -1,5 +1,5 @@
 <div class="govuk-!-margin-bottom-8">
-  <h2 id="about-course" class="govuk-heading-l">Course summary</h2>
+  <h2 id="course-summary" class="govuk-heading-l">Course summary</h2>
   {% if course.aboutCourse.length %}
     {{ course.aboutCourse | markdownToHtml | safe }}
   {% else %}
