--- a/app/views/courses/preview/index.njk
+++ b/app/views/courses/preview/index.njk
@@ -16,7 +16,7 @@
 {% block content %}
 
   {{ govukNotificationBanner({
-    text: "This is a preview of how your course appears on Find."
+    text: "This is a preview of how your course will appear on Find."
   }) }}
 
   <div class="govuk-grid-row">
