Remove the apply button in the course preview

--- a/app/views/courses/preview/index.njk
+++ b/app/views/courses/preview/index.njk
@@ -71,7 +71,7 @@
 
       {% include "./sections/support-and-advice.njk" %}
 
-      {% include "./sections/apply.njk" %}
+      {# {% include "./sections/apply.njk" %} #}
 
     </div>
   </div>
