--- a/app/views/courses/preview/sections/interview-process.njk
+++ b/app/views/courses/preview/sections/interview-process.njk
@@ -1,7 +1,7 @@
 <div class="govuk-!-margin-bottom-8">
   <h2 id="interview-process" class="govuk-heading-l">Interview process</h2>
-  {% if trainingProvider.interviewProcess.length %}
-    {{ trainingProvider.interviewProcess | markdownToHtml | safe }}
+  {% if course.interviewProcess.length %}
+    {{ course.interviewProcess | markdownToHtml | safe }}
   {% else %}
     {% set insetHtml %}
       <a class="govuk-link" href="#?referrer=preview">Enter details about the interview process</a>
